third_party/WebKit/public/web/WebAXEnums.h
@@ -46,6 +46,7 @@ enum WebAXEvent {
     WebAXEventChildrenChanged,
     WebAXEventClicked,
     WebAXEventDocumentSelectionChanged,
+    WebAXEventExpandedChanged,
     WebAXEventFocus,
     WebAXEventHide,
     WebAXEventHover,
